Finish Choose A Card page

--- a/public/what-we-do.html
+++ b/public/what-we-do.html
@@ -59,9 +59,8 @@
 					<li><a href="index.php">Home</a></li>
 					<li class="colorlib-active"><a href="what-we-do.html">What we do</a></li>
 					<li><a href="team-members.html">Team members</a></li>
-					<li><a href="choose-a-card.html">Choose a card</a></li>
-					<li><a href="use-this-card.html">Use this card</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="choose-a-card.php">Choose a card</a></li>
+					<li><a href="use-this-card.php">Use this card</a></li>
 					<li><a href="/staff/index.php">Admin</a></li>
 				</ul>
 			</nav>
@@ -87,11 +86,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">What we do</span>
 							<h2 class="colorlib-heading">Card recommendation</h2>
-							<h4>Recommend a card to make</h4>
-							<p>We recommend a card for you to make, with befenfits you want.</p>
+
+							<div class="row">
+								<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+									<p><a href="choose-a-card.php" class="btn btn-primary btn-learn">Recomment a card to make!</a></p>
+								</div>
+							</div>
+							<p>We recommend a card for you to make, with benefits you want.</p>
+
 							<br/><br/>
-							<h4>Recommend a card to use</h4>
+
+							<div class="row">
+								<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+									<p><a href="use-this-card.php" class="btn btn-primary btn-learn">Recomment a card to use!</a></p>
+								</div>
+							</div>	
 							<p>We recommend a card for you to use, at a particular place.</p>
+
 						</div>
 					</div>
 					<!-- <div class="row row-bottom-padded-md">
