--- a/public/what-we-do.html
+++ b/public/what-we-do.html
@@ -60,7 +60,6 @@
 					<li class="colorlib-active"><a href="what-we-do.html">What we do</a></li>
 					<li><a href="team-members.html">Team members</a></li>
 					<li><a href="choose-a-card.php">Choose a card</a></li>
-					<li><a href="use-this-card.php">Use this card</a></li>
 					<li><a href="/staff/index.php">Admin</a></li>
 				</ul>
 			</nav>
@@ -89,19 +88,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 							<div class="row">
 								<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-									<p><a href="choose-a-card.php" class="btn btn-primary btn-learn">Recomment a card to make!</a></p>
+									<p><a href="choose-a-card.php" class="btn btn-primary btn-learn">Recommend a card to make!</a></p>
 								</div>
 							</div>
-							<p>We recommend a card for you to make, with benefits you want.</p>
+							<p>We recommend a card for you to make or use.</p>
 
-							<br/><br/>
+							<!-- <br/><br/>
 
 							<div class="row">
 								<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 									<p><a href="use-this-card.php" class="btn btn-primary btn-learn">Recomment a card to use!</a></p>
 								</div>
 							</div>	
-							<p>We recommend a card for you to use, at a particular place.</p>
+							<p>We recommend a card for you to use, at a particular place.</p> -->
 
 						</div>
 					</div>
