--- a/public/what-we-do.html
+++ b/public/what-we-do.html
@@ -91,7 +91,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<p><a href="choose-a-card.php" class="btn btn-primary btn-learn">Recommend a card to make!</a></p>
 								</div>
 							</div>
-							<p>We recommend a card for you to make or use.</p>
+							<p>We recommend a card for you.</p>
 
 							<!-- <br/><br/>
 
