Update page name

--- a/public/team-members.html
+++ b/public/team-members.html
@@ -86,7 +86,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="about-desc">
 								<span class="heading-meta">Team members</span>
-								<h2 class="colorlib-heading">Team 1</h2>
+								<h2 class="colorlib-heading">Who we are</h2>
 								<p>김영환</p>
 								<p>박정민</p>
 								<p>윤장원</p>
